prevent horizontal scrolling

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8567,7 +8567,7 @@ img + span {
   vertical-align: middle; }
 
 html {
-  overflow-y: overlay;
+  overflow-y: auto;
   position: relative;
   min-height: 100%; }
 
